# ChangeLog for x11-wm/xpra
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/xpra/ChangeLog,v 1.98 2014/04/06 10:51:19 eva Exp $

  06 Apr 2014; Gilles Dartiguelongue <eva@gentoo.org> xpra-0.9.8.ebuild,
  xpra-0.10.12-r1.ebuild, xpra-0.11.4.ebuild, xpra-0.11.6.ebuild,
  xpra-0.12.0.ebuild, xpra-0.12.1.ebuild:
  Pin gst-python to 0.10 slot.

*xpra-0.12.1 (29 Mar 2014)

  29 Mar 2014; Michael Weber <xmw@gentoo.org> +xpra-0.12.1.ebuild:
  Version bump

*xpra-0.12.0 (27 Mar 2014)

  27 Mar 2014; Michael Weber <xmw@gentoo.org> +files/xpra-0.12.0-prefix.patch,
  +xpra-0.12.0.ebuild:
  Version bump

*xpra-0.11.6 (20 Mar 2014)

  20 Mar 2014; Michael Weber <xmw@gentoo.org> +xpra-0.11.6.ebuild,
  -xpra-0.11.2.ebuild, -xpra-0.11.3.ebuild:
  Version bump, remove old.

*xpra-0.11.4 (04 Mar 2014)

  04 Mar 2014; Michael Weber <xmw@gentoo.org> +xpra-0.11.4.ebuild:
  Version bump.

*xpra-0.11.3 (19 Feb 2014)

  19 Feb 2014; Michael Weber <xmw@gentoo.org> +xpra-0.11.3.ebuild:
  Version bump fixing bug 501268.

*xpra-0.11.2 (06 Feb 2014)

  06 Feb 2014; Michael Weber <xmw@gentoo.org> +xpra-0.11.2.ebuild,
  -xpra-0.11.0.ebuild, -xpra-0.11.1.ebuild:
  Version bump including patches mentioned on bug 499530, thanks all.

*xpra-0.11.1 (27 Jan 2014)

  27 Jan 2014; Michael Weber <xmw@gentoo.org> +xpra-0.11.1.ebuild:
  Version bump

*xpra-0.11.0 (23 Jan 2014)

  23 Jan 2014; Michael Weber <xmw@gentoo.org> +xpra-0.11.0.ebuild,
  -xpra-0.10.4.ebuild, -xpra-0.10.7.ebuild, -xpra-0.7.8.ebuild:
  Version bump, drop old ones.

*xpra-0.10.12-r1 (19 Jan 2014)

  19 Jan 2014; Michael Weber <xmw@gentoo.org>
  +files/xpra-0.10.12-launcher.patch, +xpra-0.10.12-r1.ebuild,
  -xpra-0.10.12.ebuild:
  Fix launcher (bug 498278, thanks Torsten Kaiser).

*xpra-0.10.12 (14 Jan 2014)

  14 Jan 2014; Michael Weber <xmw@gentoo.org> +xpra-0.10.12.ebuild,
  metadata.xml:
  Version bump

*xpra-0.10.7 (22 Oct 2013)
