@@ -9,6 +9,6 @@ LICENSE=GPL-2 BSD
 RDEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/pygobject:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/pygtk:2[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] x11-libs/gtk+:2 x11-libs/libX11 x11-libs/libXcomposite x11-libs/libXdamage x11-libs/libXfixes x11-libs/libXrandr x11-libs/libXtst csc? ( || ( >=media-video/ffmpeg-1.2.2 media-video/libav ) ) dec_av? ( || ( >=media-video/ffmpeg-1.2.2 media-video/libav ) ) opengl? ( dev-python/pygtkglext ) pulseaudio? ( media-sound/pulseaudio ) sound? ( media-libs/gstreamer:0.10 media-libs/gst-plugins-base:0.10 dev-python/gst-python:0.10 ) vpx? ( media-libs/libvpx virtual/ffmpeg ) webp? ( media-libs/libwebp ) x264? ( media-libs/x264 || ( >=media-video/ffmpeg-1.0.4:0 media-video/libav ) ) dev-python/dbus-python[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/ipython[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] dev-python/numpy[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] virtual/python-imaging[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)] virtual/ssh x11-apps/setxkbmap x11-apps/xmodmap server? ( x11-base/xorg-server[-minimal,xvfb] x11-drivers/xf86-input-void x11-drivers/xf86-video-dummy ) python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 ) clipboard? ( || ( server client ) ) opengl? ( client ) || ( client server ) || ( python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
-SRC_URI=http://xpra.org/src/xpra-0.12.0.tar.xz
+SRC_URI=http://xpra.org/src/xpra-0.12.2.tar.xz
 _eclasses_=distutils-r1	364122897f9dc771167ee5ff362e54e1	eutils	af81d52c25ec93fbdff71e0efb0de7b7	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	11bfe965e02dcecf237594d3e1d18891	python-utils-r1	30d5d7986d3f80d0f2c2726366426859	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=73b4a5e7c78682eb201ba5437433a8d6
+_md5_=b970edac94de1114489bb19d08f5a91e
