@@ -10,25 +10,23 @@ AUX xpra-0.8.0-prefix.patch 463 SHA256 5c05c47154751e68ea91a3988d17baa06a027370b
 AUX xpra-0.9.5-PIL.patch 4196 SHA256 8e3e9a52a3f2b4721b8980768fbac47c13493631fa6245bba873837f2e23969c SHA512 a247b14526d59e9b10c2ce27545e71f149dec9bc45c50b50840e7ddc524aaca0e25b6e322e55a90992626c2fc1eaf161d70f69a491f62afbee3372212ce70b34 WHIRLPOOL ab14c618adb6b1de786f9cc8d794d8074466bbc77065b65a75281dfb4058a22e948851dfd3587847511bebf412e05780183f68b154545974d9c4bde0606901c3
 AUX xpra-0.9.5-opengl-auto.patch 2168 SHA256 69c20c7557af0b4ab532ae505307ef2c28965e66df03a5f9ce91b9015b707a05 SHA512 72f3d5919802d90bec63f9ab927c19a896b5e17d322832bf130b1b8202452e796b93c653cc0c7293a8e1c535e28738cc0d1b21891d5c788f222e4e79265bf910 WHIRLPOOL ef90c6ca9188e8a647987a685d8aecce895bc36addc90240536929fc9bbf22332fbccb14a4a5309e389eab5b2924009c397973d9d09101d8854e19ebec435e8f
 DIST xpra-0.10.12.tar.bz2 673416 SHA256 3ccd3a400b48492f0548ba36e909ec5ce025ef88a3ca440aeafd1a73cfbe76b6 SHA512 2cd7c1eab7a0756c1700f71265859908365c463fa3dc2107de12a65674c515d7fdbdb62045c65ff27695939daad4c3da192829ac80d56f997d93d2c9a68ae2c9 WHIRLPOOL 30060b2eb62306262bcb23e3984e7e8bdd81a433306f042b09164255b3e0759339499c29a76ed01ec56f4af9533708372f4653cc4b497b1212b7a04b51e4dad6
-DIST xpra-0.11.4.tar.xz 928208 SHA256 d9ecf1faa67bfcbb5406481f77bda8dd1c6db755eeb1ebbb5ed45a7abf0de71b SHA512 982a36f909b630f442476e7a4c92d986c217e971d010bda25779b04fc75e75ca8c1f3c4802592fca34944ba70c29b28db46b5b0a2f6bb0484d28c2d11ecfd38d WHIRLPOOL ca076975e3c209db877e87ea448fec5d9c695c70ca9fe218c5c29a36de0be7e2b6fab9fcff487dd1f0b196ea9b498f1f804859d342107f92d8b83b973d328bf1
 DIST xpra-0.11.6.tar.xz 928652 SHA256 8e67681bd6313049e2b452734459d65b16e8c08c6273abfccade91d868ce0aea SHA512 4d276d99bdb1c3f9c95e44720552e401d251511f6d90f7cc86cc655b0fd841b7a3fbc919dd091f67e50e2530abb5943c7af9b36477347b013efe58d55b87da30 WHIRLPOOL 5f44b2e850bf0a6d8ae4a25284d7b2adba3e0c50b1211e248472b1fa715ec907cf7e16724a2c89f7bed0e29cb7fd85e219d7aaf0e0b0a6b7daa160a6a1ab570a
-DIST xpra-0.12.0.tar.xz 993808 SHA256 90ac0972602704396f06e40543245f5436e54e1ea4a8f65e70dbcfb2a4253db9 SHA512 71093ce85ba85b0fed33bae73bc6ff532f6cd8c5a5c8d94f0e8d4cf2b61a2aed71d21f6c1e639b56c5616762322550f2f1d87c2ca7f88dbc8396a24a0c09b9e1 WHIRLPOOL c36fe5bd7d3c437cfb6aab82d89b9569826b175f80761f9bcdef74d14103253349177ce6004c43c5b5c7ed471910b8383a2921c5713b7dde7b575f3dd2043fa7
 DIST xpra-0.12.1.tar.xz 981344 SHA256 6b7fa97059e3bd0a2ab8ab17ada1758185f282b2f3439d84913f194419280f53 SHA512 cb559536adb67c07bafa5dd027df106c5f5eb4c57ea9ec4609a6c3d08bd782dfac47478feafdd9b5d5e76fd9e33b933340526ab8c19cc75e6e2d347b4fcceee9 WHIRLPOOL 3c63023e50954c002f14ffea0949e7d2d9ebb313f53b63bbe2d70a254cb32d09c71a37ee144606b50d1234eb6e685c3b18179c52470ea9aab3097f7bdbdf2798
+DIST xpra-0.12.2.tar.xz 981468 SHA256 ec6af0e9a6fbff5157370ac8bdcbf33f7ea5503c2d4a1f3d7c5d9c32ddd75ff5 SHA512 23bc80d20e581e8aa6d6183e97f2b6312d0eb8d8435bbb3849c765b79065124b940d3eeee59495a743368fdc14b6f87c3cb052bf57c0fef3228a5be69d4b1895 WHIRLPOOL a158e5cc284297060091f28016947ab6d63fceff3729b8170aeb693b30da9ee34010ee931703dabc7ceaa77f440aae43cfacefbaa8dd9cfd4b5e912bb2e8e8b0
 DIST xpra-0.8.8.tar.bz2 581029 SHA256 248bac50c78eccfbc7f728667f9d0ef26b101b288193fa286881cda452e63683 SHA512 b3d2121c13e293cca466997af1b49069ced0012c6692cfac375e9990d62efc916b44f2641a4e9c5e04e425d19c14e85e1521ae1832aa3ea02fcc46ac29672a63 WHIRLPOOL b1f654542e8e89ce89ffb6fac9ee3a42f0c88e6d9ce0fdc1573b28c0b117e970f7e96484eadf7552c35e6dd3064f37495a4eb2cdb1c51c2dc0a8ded8877ba321
 DIST xpra-0.9.8.tar.bz2 607316 SHA256 6c33f2da404209158a4684d26365bac56c77d3f158b95710a482e3a813178884 SHA512 324eeb09a2f948ded76a6cb53180ee68dedbce1c9f11736475e43551f9f27cb09949f1f8c1cdc1f5eb5000070a73e58593fac74d7ca3e24d2ddbc69bdf57d70e WHIRLPOOL 77dc3f3e27e1914d4691eb08247d1025a42d438167db178e59a3befdab44c8c02618f46968f5805af886aafb0129c1461a4843cd753f79d10e4bd9c4a07eeb9a
 EBUILD xpra-0.10.12-r1.ebuild 2936 SHA256 3d6bc1dce0ef9b2118a800a8ae29972c2a3809c71024c8b64319658b6895ec46 SHA512 bc0f75e20b3c2a085d7e131351c448f021d957309c64dbf3b6fa108391d31a605b8eb3374ac2ac7bf1004b30f11b0ac7845ea8133988d5a29ca962e4e5dd0a12 WHIRLPOOL 2ce6eb902bd0b5bc1a8bd04f7591192c86bb0897a796a14263a6d7a0e66c0e91840a835d716376efc09e51a276abf1be0ca344dd6402d15aa279221608777ab8
-EBUILD xpra-0.11.4.ebuild 2884 SHA256 9d0d27abce7e8fe568f074e02ac44b2a60fd5ca3c9eac6255c448fdf125eb71e SHA512 f30847b61981fa76806c097af7c3a53cf96f3ed91364b31eb1e2d564f8817cbb739a8ece95702a92632e34338f4223cd3e9b6aa1fa936f40b4b6116aefa3a18f WHIRLPOOL 755d7ac83184bc8882cfea418099752b317aaa5942e977df04a95cf4055f603963124978bcbd68230de906a8f61643329b95ee40a0799c350bb6b020e8505bfd
 EBUILD xpra-0.11.6.ebuild 2884 SHA256 c5dd801042135a89a95ad941f37101a057ab0317fd1187601971e7e1675cb3b0 SHA512 4fff027d8bf8f9ad960a5851bd4ed417607f07686f00062ec26b94f47a8fc901e3b873aa84b3761bfe0b2af890303f42684c296c26ad53736c532e068c004f1c WHIRLPOOL bfd64205a5df0b0573f97955eec9997741351fc01e450a1c6282d1e431f1385c58f19bf132f81bbf9284f1cf3379c4cd37aac8d0c79f2045d237d86a3bdc5e34
-EBUILD xpra-0.12.0.ebuild 2884 SHA256 002e802b3345fea66180c1e27562f10b2a51910af36bb66d6267b57772f38a48 SHA512 587db72a2a1e5b1c0cb9eaa056b47e23584416f3ebcd633572ec4885bcde12a5f2e8731e830ad9bcb2e9a3fb26489bd0d52c2506b16705581ab33092a22a4eb7 WHIRLPOOL a11a1a801046634df23b608d5952522f98e35aebd9a63a7d93bed9e9edf4a3e0112c7b7756369dc666ceab4009753d6cf10b456d5c085fad6591ca0166a9abe7
 EBUILD xpra-0.12.1.ebuild 2884 SHA256 5b261b25351111373cf557043dabec06b53f74e915ff5bb8a05c2ce23b888355 SHA512 52919f94459c766fcd1a140c6aeefd62785ab6ba2e89a4cbc6286e95dc5b0cfe3b9516582342d00ef7e3e3f90aa6712750d8703d2b010ec4afcb9f6b986d9776 WHIRLPOOL 901a81659a15a3acb814e548f406176026a3bb3b1382c9641680e2b0f1c9c4cf5583434f51b1be0e47b37d1d5a71bb41efc3bd0d88b1b4f00cbe83a8c60ab3f6
+EBUILD xpra-0.12.2.ebuild 2884 SHA256 9155e367f866bec459072dd94b39371c456af3d37f9fb6b8400d89d15640972d SHA512 36a12742d197018dcc339c28cd64ddb0c1ef97f1ad8e8a78d77c94cc13b53d0a9384ccea8bd246b9f63138f9d0a0e9eb9354ef8f9212e44ca39c1a7aa590347f WHIRLPOOL 49b7ca4cd134db76d25c66aa12616482b85a660cd271e35fcbbe58d292efe3ea7cb0c045f9639d5ec1640ac4340c2be767a4aa87dfea89ef5ded0df075b55dd0
 EBUILD xpra-0.8.8.ebuild 2257 SHA256 c7104143884d38acf3570af333ed58434846c889b4cc0f4810638ef54c24ac29 SHA512 983b7c148c2adf455482243efc9b771fe0154682f842ad0d793e9c0dfc36e2238df08e12581e5ad27140b58c06cd37e8d581dfef41b37ff42a5ecb343f8cfabf WHIRLPOOL 8ab3dcefad02cbb0014d72c49660769431b93d36c30215bc38e0ea4d6b544f9e2538da4b108948ffddc0cfa08660061da58e61a6c0cecb9ed86884ae79019361
 EBUILD xpra-0.9.8.ebuild 2656 SHA256 58036836982d678b8339d7620084a48f0c719b3e054727ea88fd0be0872f1556 SHA512 74ea8e0c77b622839b223d56ed9a1d98ecc4b8dca09ca13bbb2f9e8d6220d1ea321b06360ed36238fb96a1fe95b3a09e575ff3b25a4a5548763789095c771a21 WHIRLPOOL 5b020f247fb2a69bdb3bd25a941f966e57f78995eb19c41a5d06b33ec118168d269cfdcb517267c6ee6bd901b7695638c59a68f652bb4ec18b1806836b5fd790
-MISC ChangeLog 14193 SHA256 777350af82678c7bf2afa47452b8b18254244e3885d2381981158ae2b58d4a31 SHA512 7fdd329e3d87502ed8a809406c602e340bcac4a18f55c182cbace9ca6503535d1b41220a3ace4e038035bc4915fd88ad13c6d0c704b63e18f2661d2440305a08 WHIRLPOOL 76b2ed984aa8905b6fa7ed2294ee763d1a6a6405eb9fbb13bdb70abcecc61f42a1628399ea6ab98a386564d4f71e748e1a0b4a691dec3a4620b14bdc3f94e6bf
+MISC ChangeLog 14349 SHA256 d344e1a35f1452443c0f29de9750b6aa01c99ea04ad627f0a9bee7a47bdacc51 SHA512 6dddfb972db94481f96f02778dc25883fdd47638a8bfd511bb85686bfeb26c30011652fd7e38ec885d27f4c3592098787665d1a40c79f4239b7681ae8bcc5b05 WHIRLPOOL 7948874c0a23ab68c9b8056881cbd489a97a27c6ab7016efce8189221698605e8da522f92f42c342a5248bbe91eb8b8953587f40c81d80bac97c5429ffdb9ab9
 MISC metadata.xml 807 SHA256 f6d1439d6efe3f82dd2d49440d0d44b8d7e01933ea607f46ffb48e43b6a8384c SHA512 38f024193f3101248653f0ecc21f2aff1fc1041a147067ae48e101a4c467da522026dba22e6e4716d1271eef9b064455a007f123d75efad3e0f58604f51ab4c6 WHIRLPOOL 56ea9db2c71b6ff8da6b0dc288ce4e7599cc9b0a38b89fd344e3f0a3f3c27c44e53d993054c99fede4f1541690aae5b2369f67eaa72ac324e9b6624ba5df4685
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNBMagACgkQ1fmVwcYIWAYmgwCfWEuyW846FWexQEf4nGCYYVY2
-UrIAoOvJSz5JTyti6n7cGV2VUWgUvpvq
-=sZwi
+iF4EAREIAAYFAlNFUSoACgkQknrdDGLu8JCxVgD9HrhoIAxDnwuobkpXU1hvQ66V
+8mmdq7nsLaLVtynKr/QA/0MxF8uVyk22vHIYcXG5dzOCrOvgY7yh1Z9U6z148D9S
+=WuZJ
 -----END PGP SIGNATURE-----
